--- a/parts/header.twig
+++ b/parts/header.twig
@@ -5,8 +5,10 @@
   </div>
 
   <div class="headline">
-    <h1>{{ meta.start.title }}</h1>
-    <h2>{{ meta.start.subtitle }}</h2>
+    <a href="#top">
+      <h1>{{ meta.start.title }}</h1>
+      <h2>{{ meta.start.subtitle }}</h2>
+    </a>
   </div>
   <div id="nav-toggle"></div>
   <div class="nav-container">
