--- a/parts/custom.twig
+++ b/parts/custom.twig
@@ -1,4 +1,4 @@
-<section id="custom" itemscope itemtype="WebPage">
+<section id="custom" class="{{ meta.custom }}" itemscope itemtype="WebPage">
   <div class="inside">
     {{ content }}
   </div>
