--- a/index.twig
+++ b/index.twig
@@ -16,12 +16,12 @@
       {% if meta.header is defined %}{% include "parts/header.twig" %}{% endif %}
       {% if meta.start is defined %}{% include "parts/start.twig" %}{% endif %}
       {% if meta.services is defined %}{% include "parts/services.twig" %}{% endif %}
+      {% if meta.custom is defined %}{% include "parts/custom.twig" %}{% endif %}
       {% if meta.deals is defined %}{% include "parts/deals.twig" %}{% endif %}
       {% if meta.about is defined %}{% include "parts/about.twig" %}{% endif %}
       {% if meta.contact is defined %}{% include "parts/contact.twig" %}{% endif %}
       {% if meta.footer is defined %}{% include "parts/footer.twig" %}{% endif %}
-      {% if meta.custom %}{% include "parts/custom.twig" %}{% endif %}
-
+    
     </main>
 
     {% if 'footer' in meta.uses %}{% include "parts/footer.twig" %}{% endif %}
