--- a/parts/go_back.twig
+++ b/parts/go_back.twig
@@ -1,1 +1,1 @@
-<div class="go-back"><a href="javascript:history.back()">🡰 {{ meta.go_back.label }}</a></div>
+<div class="go-back"><a href="javascript:history.back()">{{ meta.go_back.label }}</a></div>
