--- a/parts/scripts.twig
+++ b/parts/scripts.twig
@@ -26,7 +26,7 @@
         },
         "email": "{{ meta.contact.email }}",
         "faxNumber": "{{ meta.contact.fax.number_real }}",
-        "logo": "{{ base_url }}/{{ meta.header.logo }}",
+        "logo": "{{ base_url }}/{{ meta.header.logo }}"
     }
 </script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
