--- a/parts/contact.twig
+++ b/parts/contact.twig
@@ -52,7 +52,7 @@
   {% if meta.contact.gmaps_api_key %}
     <div class="map">
 
-      <iframe
+      <iframe title="Google Maps"
         height="350"
         frameborder="0" style="border:0"
         allowfullscreen
