--- a/parts/deals.twig
+++ b/parts/deals.twig
@@ -7,7 +7,7 @@
 
         <div class="deal" itemscope itemtype="http://schema.org/Offer">
           <div class="icon-wrapper">
-            <img class="icon" alt="Offer Icon" src="{{ deal.icon }}">
+            <img class="icon" src="{{ deal.icon }}" alt="{{ deal.icon_alt }}">
           </div>
           <div class="reduced-by">{{ deal.reduced }}</div>
           <div class="description" itemprop="description">{{ deal.description }}</div>
