--- a/parts/header.twig
+++ b/parts/header.twig
@@ -1,11 +1,11 @@
 <header itemscope itemtype="http://schema.org/WPHeader">
 
   <div class="logo-wrapper">
-    <a href="#top"><img src="{{ meta.header.logo }}" class="logo" alt="{{ site_title }}"></a>
+    <a href="#top" title="Go to top"><img src="{{ meta.header.logo }}" class="logo" alt="{{ site_title }}"></a>
   </div>
 
   <div class="headline">
-    <a href="#top">
+    <a href="#top" title="Go to top">
       <h1>{{ meta.start.title }}</h1>
       <h2>{{ meta.start.subtitle }}</h2>
     </a>
