Add support for manifest and service worker

--- a/parts/head.twig
+++ b/parts/head.twig
@@ -5,6 +5,8 @@
 <title>{{ meta.title }}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="{{ pages.index.meta.description|striptags }}" />
+<meta name="theme-color" content="#c9352c" />
+<link rel="manifest" href="/manifest.json">
 
 {# OpenGraph #}
 <meta property="og:type" content="website"/>
