--- a/parts/scripts.twig
+++ b/parts/scripts.twig
@@ -34,5 +34,28 @@
     navigator.serviceWorker.register('service-worker.js');
   }
 </script>
+<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+<script>
+window.addEventListener("load", function(){
+window.cookieconsent.initialise({
+  "palette": {
+    "popup": {
+      "background": "#252e39"
+    },
+    "button": {
+      "background": "#c9352c"
+    }
+  },
+  "theme": "edgeless",
+  "position": "bottom-left",
+  "content": {
+    "message": "Diese Website nutzt Cookies.",
+    "dismiss": "Akzeptieren",
+    "link": "Weitere Informationen",
+    "href": "{{ base_url }}}/privacy"
+  }
+})});
+</script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="{{ theme_url }}/js/animations.js"></script>
