--- a/css/style.css
+++ b/css/style.css
@@ -202,13 +202,14 @@ header.small nav {
         margin-left: 65px;
     }
     header #nav-toggle {
-        background: url('../assets/menu.svg');
+        background: url('../assets/menu.svg') center/32px no-repeat;
         display:block;
         width: 32px;
         height: 32px;
         position:absolute;
-        top: 18px;
-        left: 22px;
+        top: 3px;
+        left: 8px;
+        padding: 15px;
     }
     header .nav-container {
         text-align:left;
