--- a/css/style.css
+++ b/css/style.css
@@ -787,6 +787,7 @@ footer nav a:hover {
     padding-top: 0;
     text-align: left;
     margin-bottom: 40px;
+    word-break: break-word;
 }
 #custom.single h1 {
     margin-bottom: 40px;
