Add no-js support and remove modernizr finally

--- a/parts/header.twig
+++ b/parts/header.twig
@@ -10,7 +10,7 @@
       <h2>{{ meta.start.subtitle }}</h2>
     </a>
   </div>
-  <div id="nav-toggle"></div>
+  <a href="#mainNav" id="nav-toggle"></a>
   <div class="nav-container">
     <nav id="mainNav" itemscope itemtype="http://schema.org/SiteNavigationElement">
       
