--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ a[href$=".pdf"] {
 
 /* --- Header and menu --- */
 
-header{
+header {
     background: #ffffff;
     position:fixed;
     width:100%;
@@ -118,19 +118,19 @@ header h2 {
     text-align:center;
 }
 /* Header small*/
-header.small {
+header.small, .no-js header {
     height:80px;
 }
-header.small .headline{
+header.small .headline, .no-js header .headline{
     display:none;
 }
-header.small img.logo{
+header.small img.logo, .no-js header img.logo{
     display:inline-block;
 }
-header.small img {
+header.small img, .no-js header img{
     height:60px;
 }
-header.small nav {
+header.small nav, .no-js header nav{
     line-height:80px;
     vertical-align: middle;
     position:absolute;
@@ -142,11 +142,11 @@ header.small nav {
 }
 /* tablet big */
 @media screen and (max-width: 1230px) {
-    header.small nav {
+    header.small nav, .no-js header nav{
         right: 3%;
         font-size: 21pt;
     }
-    header.small img.logo {
+    header.small img.logo, .no-js header img.logo{
         height: 52px;
         margin-top: 14px;
     }
@@ -156,10 +156,10 @@ header.small nav {
     header nav{
         font-size: 20pt;
     }
-    header.small {
+    header.small, .no-js header{
         height: 160px;
     }
-    header.small nav {
+    header.small nav, .no-js header nav{
         position:relative;
         top: 0px;
         right: auto;
@@ -174,7 +174,21 @@ header.small nav {
 }
 /* smartphone */
 @media screen and (max-width: 739px) {
-    header nav {
+    .no-js header nav:target {
+        display:block;
+    }
+    .no-js header img.logo {
+        display:none;
+    }
+    .no-js header .headline {
+        display:block;
+    }
+    .no-js header nav {
+        right: 0;
+        line-height: 1;
+        position:relative;
+    }
+    header nav, .no-js header nav {
         display:none; 
         transition:none;
         background: #fff;
@@ -185,25 +199,22 @@ header.small nav {
         box-shadow: 0 6px 9px -5px rgba(0,0,0,0.4);
         font-size: 18pt;
     }
-    header {
+    header, .no-js header{
         height: 68px;
     }
-    header .headline{
+    header .headline, .no-js header .headline{
         margin-top: 15px;
     }
-    header h1, header h2 {
+    header h1, .no-js header h1, header h2, .no-js header h2{
         text-align:left;
         margin-left: 77px;
     }
-    header h1 {
+    header h1, .no-js header h1{
         font-size: 13pt;
         margin-bottom: 6px;
     }
-    header h2 {
+    header h2, .no-js header h2{
         font-size: 10pt;
-    }
-    header .logo-wrapper {
-        margin-left: 65px;
     }
     header #nav-toggle {
         background: url('../assets/menu.svg') center/32px no-repeat;
@@ -218,7 +229,7 @@ header.small nav {
     header .nav-container {
         text-align:left;
     }
-    header nav a {
+    header nav a, .no-js header nav a{
         display:block;
         padding: 10px 0;
         margin: 0;
@@ -226,22 +237,22 @@ header.small nav {
 }
 /* smartphone small */
 @media screen and (max-width: 359px) {
-    header #nav-toggle {
+    header #nav-toggle, .no-js header #nav-toggle{
         width: 30px;
         height: 30px;
         top: 3px;
         left: 2px;
     }
-    header h1 {
+    header h1, .no-js header h1{
         font-size: 12.4pt;
     }
-    header h2 {
+    header h2, .no-js header h2{
         font-size: 9.4pt;
     }
-    header h1, header h2 {
+    header h1, .no-js header h1, header h2, .no-js header h2{
         margin-left: 60px;
     }
-    header nav {
+    header nav, .no-js header nav{
         padding-left: 60px;
         font-size: 16pt;
     }
@@ -256,6 +267,10 @@ header.small nav {
     height:calc(100vh - 235px);
     max-height: 750px;
     margin-top:235px;
+}
+.no-js #start .content {
+    height: calc(100vh - 80px);
+    margin-top: 80px;
 }
 #start .image-container {
     position:absolute;
@@ -304,7 +319,7 @@ header.small nav {
 }
 /* smartphone */
 @media screen and (max-width: 739px) {
-    #start .content {
+    #start .content, .no-js #start .content{
         margin-top: 68px;
         height: calc(100vh - 68px);
         max-height: 400px;
