--- a/parts/about.twig
+++ b/parts/about.twig
@@ -16,7 +16,7 @@
       <a href="#_" class="lightbox" id="lb-imgbig">
         <picture itemscope itemtype="http://schema.org/ImageObject">
           <source srcset="{{ meta.about.big_img.image }}.webp" type="image/webp">
-          <img src="{{ meta.about.big_img.image }}" alt="{{ meta.about.big_img.caption }}">
+          <img src="{{ meta.about.big_img.image }}.jpg" alt="{{ meta.about.big_img.caption }}">
         </picture>
         <span class="close" href="#_"></span>
         <object><a class="next" href="#lb-imgs0"></a></object>
@@ -27,7 +27,7 @@
         <a href="#lb-imgs{{ id }}">
           <picture itemscope itemtype="http://schema.org/ImageObject">
             <source srcset="{{ elem.thumb }}.webp" type="image/webp">
-            <img src="{{ elem.thumb }}" class="small" alt="{{ elem.caption }}">
+            <img src="{{ elem.thumb }}.jpg" class="small" alt="{{ elem.caption }}">
           </picture>
         </a>
         
@@ -35,7 +35,7 @@
           {% if meta.about.more_img[id - 1] is defined %}<object><a class="prev" href="#lb-imgs{{ id - 1 }}"></a></object>{% else %}<object><a class="prev" href="#lb-imgbig"></a></object>{% endif %}
           <picture itemscope itemtype="http://schema.org/ImageObject">
             <source srcset="{{ elem.image }}.webp" type="image/webp">
-            <img src="{{ elem.image }}" alt="{{ elem.caption }}">
+            <img src="{{ elem.image }}.jpg" alt="{{ elem.caption }}">
           </picture>
           <span class="close" href="#_"></span>
           {% if meta.about.more_img[id + 1] is defined %}<object><a class="next" href="#lb-imgs{{ id + 1 }}"></a></object>{% endif %}
