--- a/parts/head.twig
+++ b/parts/head.twig
@@ -19,7 +19,9 @@
 <meta name="twitter:card" content="summary" />
 
 {# Favicon in Website Root #}
-<link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon_32x32.png">
+<link rel="icon" type="image/png" sizes="192x192" href="favicon_192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="favicon_512x512.png">
 <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 
 {# External Includes #}
