Fix typo in privacy URL for cookie consent

--- a/parts/scripts.twig
+++ b/parts/scripts.twig
@@ -53,7 +53,7 @@ window.cookieconsent.initialise({
     "message": "Diese Website nutzt Cookies.",
     "dismiss": "Akzeptieren",
     "link": "Weitere Informationen",
-    "href": "{{ base_url }}}/privacy"
+    "href": "{{ base_url }}/privacy"
   }
 })});
 </script>
