Typo in services itemtype

--- a/parts/services.twig
+++ b/parts/services.twig
@@ -1,4 +1,4 @@
-<section id="services" itemscope itemtype="http://scheme.org/WebPage">
+<section id="services" itemscope itemtype="http://schema.org/WebPage">
 
   <div class="inside">
 
