--- a/parts/custom.twig
+++ b/parts/custom.twig
@@ -1,5 +1,7 @@
 <section id="custom" class="{{ meta.custom.type }}" itemscope itemtype="https://schema.org/WebPage">
   <div class="inside">
-    {{ content }}
+    <div class="inside-content">
+      {{ content }}
+    </div>  
   </div>
 </section>
