--- a/parts/head.twig
+++ b/parts/head.twig
@@ -27,4 +27,4 @@
 {# External Includes #}
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Merriweather" rel="stylesheet">
 <link href="{{ theme_url }}/css/normalize.css" rel="stylesheet">
-<link href="{{ theme_url }}/css/style.css?v=u77gb3" rel="stylesheet">
+<link href="{{ theme_url }}/css/style.css?v=u87gop" rel="stylesheet">
