--- a/css/style.css
+++ b/css/style.css
@@ -778,6 +778,18 @@ header.small nav, .no-js header nav{
 
 /* Map */
 
+#contact .map {
+    width: 100%;
+    height: 350px;
+}
+
+#contact .map img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    
+}
+
 #contact iframe {
     width: 100%;
     display:block;
